add picture and documentation

--- a/pruning_distillation_pipeline.ipynb
+++ b/pruning_distillation_pipeline.ipynb
@@ -24,7 +24,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Training Evaluation metrics"
    ]
@@ -76,9 +78,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "### Final Model Evaluation"
+    "### Final Model Evaluation\n",
+    "\n",
+    "Configure evalutation to be text-classification and modify it for the sst-2 dataset."
    ]
   },
   {
@@ -110,7 +116,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Training Visualization"
    ]
@@ -195,7 +203,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Load Local model"
    ]
@@ -226,7 +236,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load Dataset and Tokenizer"
+    "### Load Dataset and Tokenizer\n",
+    "\n",
+    "This code block sets up the SST-2 dataset for use with a BERT-based model. It begins by loading the tokenizer for the textattack/bert-base-uncased-SST-2 model and either loading or retrieving the SST-2 dataset from local storage. A preprocessing function is defined to tokenize the sentences with truncation to a maximum length of 512 tokens. We tokenize the dataset to convert text into numerical representations that a model can understand and process for training. Finally, the training dataset is shuffled with a fixed seed to ensure reproducibility."
    ]
   },
   {
@@ -272,7 +284,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Load External BERT Model"
    ]
@@ -321,7 +335,7 @@
    "source": [
     "# Structural Pruning\n",
     "\n",
-    "In the following, the Attention Heads of the original BERT model are structurally pruned based on the smallest magnitude weights. All Attention layers are retained, but the size of the Attention Heads is reduced from 768 to 384. In addition, the pooling and classification layers are configured for training. In total, the number of parameters is reduced from 109M to 33M, a reduction of about 70%.\n",
+    "In the following, the Attention Heads of the original BERT model are structurally pruned based on the smallest magnitude weights. All Attention layers are retained. The hidden-size is reduced from 768 to 384 and the intermediate-size is from 3072 to 1024. The hidden-size represents the Query, Key and Value matricies and the intermediate-size the feed-forward layer. In addition, the pooling and classification layers are configured for training. In total, the number of parameters is reduced from 109M to 33M, a reduction of about 70%.\n",
     "\n",
     "This pruning is based on the work of https://github.com/VainF/Torch-Pruning."
    ]
@@ -427,12 +441,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![image1](./model_comparison.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Training Variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -479,11 +500,11 @@
      "text": [
       "/Users/christophknaden/venv/lib/python3.9/site-packages/transformers/training_args.py:1575: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
       "  warnings.warn(\n",
-      "/var/folders/mv/96db_j8j3ng3t9pc8jczncdh0000gn/T/ipykernel_4870/2656574652.py:37: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/mv/96db_j8j3ng3t9pc8jczncdh0000gn/T/ipykernel_1144/2656574652.py:37: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  prune_trainer = Trainer (\n",
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at google/bert_uncased_L-2_H-128_A-2 and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "/var/folders/mv/96db_j8j3ng3t9pc8jczncdh0000gn/T/ipykernel_4870/2656574652.py:51: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "/var/folders/mv/96db_j8j3ng3t9pc8jczncdh0000gn/T/ipykernel_1144/2656574652.py:51: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  tiny_bert_trainer = Trainer (\n"
      ]
     }
@@ -552,6 +573,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Save and Load Pruned Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -591,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pruned Model"
+    "#### Train Pruned Model"
    ]
   },
   {
@@ -753,6 +783,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Save and Load Pruned Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -785,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tiny Bert"
+    "#### Train Tiny-BERT"
    ]
   },
   {
@@ -929,12 +968,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Save and Load Tiny-BERT Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pruned model path with training\n",
     "tiny_bert_model_trained_path = \"./tiny_bert_model_trained\""
    ]
   },
@@ -944,7 +991,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save pruned model with training\n",
     "tiny_bert_trainer.save_model(tiny_bert_model_trained_path)"
    ]
   },
@@ -1064,8 +1110,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Destillation Trainer\n",
+    "\n",
+    "This code defines a custom DistillationTrainer for training a student model with knowledge distillation from a teacher model. The custom loss function combines two components: the student loss (based on ground truth labels) and the teacher loss (calculated using Kullback-Leibler Divergence between the softened predictions of the student and teacher). These two losses are weighted by the hyperparameter alpha, allowing the student to learn from both the ground truth and the teacher's knowledge."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "executionInfo": {
      "elapsed": 243,
@@ -1105,7 +1160,7 @@
     "        self.teacher.eval()\n",
     "\n",
     "def compute_loss(self, model, inputs, return_outputs=False, num_items_in_batch=None):\n",
-    "    # compute student output\n",
+    "    # compute student original target loss\n",
     "    outputs_student = model(**inputs)\n",
     "    student_loss = outputs_student.loss\n",
     "\n",
@@ -1122,7 +1177,7 @@
     "        F.log_softmax(outputs_student.logits / self.args.temperature, dim=-1),\n",
     "        F.softmax(outputs_teacher.logits / self.args.temperature, dim=-1)) * (self.args.temperature ** 2))\n",
     "\n",
-    "    # Return weighted student loss\n",
+    "    # Return weighted student loss from both teacher and original target\n",
     "    loss = self.args.alpha * student_loss + (1. - self.args.alpha) * loss_logits\n",
     "    return (loss, outputs_student) if return_outputs else loss\n"
    ]
@@ -1270,7 +1325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pruned Model"
+    "#### Train Pruned Model"
    ]
   },
   {
@@ -1386,12 +1441,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Save and Load Pruned Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pruned model path with training\n",
     "pruned_distilled_model_path = \"./pruned_distilled_model\""
    ]
   },
@@ -1416,7 +1479,6 @@
     }
    ],
    "source": [
-    "# Save pruned model with training\n",
     "distilliation_trainer_pruned.save_model(pruned_distilled_model_path)"
    ]
   },
@@ -1433,7 +1495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tiny Bert"
+    "#### Train Tiny-BERT"
    ]
   },
   {
@@ -1593,12 +1655,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Save and Load Tiny-BERT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pruned model path with training\n",
     "tiny_bert_distilled_model_path = \"./tiny_bert_distilled_model\""
    ]
   },
@@ -1616,7 +1686,6 @@
     }
    ],
    "source": [
-    "# Save pruned model with training\n",
     "distilliation_trainer_tiny_bert.save_model(tiny_bert_distilled_model_path)"
    ]
   },
@@ -1762,7 +1831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pruned Model"
+    "#### Train Pruned Model"
    ]
   },
   {
@@ -2116,12 +2185,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Save and Load Pruned Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pruned model path with training\n",
     "pruned_model_opt_destillation_path = \"./pruned_model_opt_destilled\""
    ]
   },
@@ -2131,7 +2208,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save pruned model with training\n",
     "pruned_opt_distillation_trainer.save_model(pruned_model_opt_destillation_path)"
    ]
   },
@@ -2148,7 +2224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Tiny Bert"
+    "#### Train Tiny-BERT"
    ]
   },
   {
@@ -2510,12 +2586,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Save and Load Tiny-BERT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pruned model path with training\n",
     "tiny_bert_model_opt_destillation_path = \"./tiny_bert_model_opt_destilled\""
    ]
   },
@@ -2533,7 +2617,6 @@
     }
    ],
    "source": [
-    "# Save pruned model with training\n",
     "tiny_bert_opt_distilliation_trainer.save_model(tiny_bert_model_opt_destillation_path)"
    ]
   },
@@ -2557,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2587,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2722,22 +2805,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The history saving thread hit an unexpected error (OperationalError('attempt to write a readonly database')).History will not be written to the database."
-     ]
-    },
     {
      "data": {
       "text/html": [
-       "<table border=\"1\" style=\"border-collapse: collapse;\"><thead><tr><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Metric</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + Disitilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">BERT</th></tr></thead><tbody><tr><td style=\"text-align: left; border: 1px solid black;\">accuracy</td><td style=\"text-align: right; border: 1px solid black;\">0.8211</td><td style=\"text-align: right; border: 1px solid black;\">0.828</td><td style=\"text-align: right; border: 1px solid black;\">0.8245</td><td style=\"text-align: right; border: 1px solid black;\">0.8314</td><td style=\"text-align: right; border: 1px solid black;\">0.8303</td><td style=\"text-align: right; border: 1px solid black;\">0.8349</td><td style=\"text-align: right; border: 1px solid black;\">0.9243</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">total_time_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">7.3487</td><td style=\"text-align: right; border: 1px solid black;\">7.5445</td><td style=\"text-align: right; border: 1px solid black;\">7.8802</td><td style=\"text-align: right; border: 1px solid black;\">0.9557</td><td style=\"text-align: right; border: 1px solid black;\">0.7169</td><td style=\"text-align: right; border: 1px solid black;\">0.6305</td><td style=\"text-align: right; border: 1px solid black;\">23.6896</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">samples_per_second</td><td style=\"text-align: right; border: 1px solid black;\">118.6605</td><td style=\"text-align: right; border: 1px solid black;\">115.5804</td><td style=\"text-align: right; border: 1px solid black;\">110.6566</td><td style=\"text-align: right; border: 1px solid black;\">912.428</td><td style=\"text-align: right; border: 1px solid black;\">1216.2872</td><td style=\"text-align: right; border: 1px solid black;\">1383.1345</td><td style=\"text-align: right; border: 1px solid black;\">36.8094</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">latency_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">0.0084</td><td style=\"text-align: right; border: 1px solid black;\">0.0087</td><td style=\"text-align: right; border: 1px solid black;\">0.009</td><td style=\"text-align: right; border: 1px solid black;\">0.0011</td><td style=\"text-align: right; border: 1px solid black;\">0.0008</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0272</td></tr></tbody></table>"
+       "<table border=\"1\" style=\"border-collapse: collapse;\"><thead><tr><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Metric</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + Disitilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">BERT</th></tr></thead><tbody><tr><td style=\"text-align: left; border: 1px solid black;\">accuracy</td><td style=\"text-align: right; border: 1px solid black;\">0.8211</td><td style=\"text-align: right; border: 1px solid black;\">0.828</td><td style=\"text-align: right; border: 1px solid black;\">0.8245</td><td style=\"text-align: right; border: 1px solid black;\">0.8314</td><td style=\"text-align: right; border: 1px solid black;\">0.8303</td><td style=\"text-align: right; border: 1px solid black;\">0.8349</td><td style=\"text-align: right; border: 1px solid black;\">0.9243</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">total_time_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">6.7801</td><td style=\"text-align: right; border: 1px solid black;\">6.4692</td><td style=\"text-align: right; border: 1px solid black;\">7.6287</td><td style=\"text-align: right; border: 1px solid black;\">0.5836</td><td style=\"text-align: right; border: 1px solid black;\">0.5734</td><td style=\"text-align: right; border: 1px solid black;\">0.6305</td><td style=\"text-align: right; border: 1px solid black;\">20.5612</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">samples_per_second</td><td style=\"text-align: right; border: 1px solid black;\">128.6123</td><td style=\"text-align: right; border: 1px solid black;\">134.7927</td><td style=\"text-align: right; border: 1px solid black;\">114.3047</td><td style=\"text-align: right; border: 1px solid black;\">1494.1932</td><td style=\"text-align: right; border: 1px solid black;\">1520.6975</td><td style=\"text-align: right; border: 1px solid black;\">1383.0998</td><td style=\"text-align: right; border: 1px solid black;\">42.41</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">latency_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">0.0078</td><td style=\"text-align: right; border: 1px solid black;\">0.0074</td><td style=\"text-align: right; border: 1px solid black;\">0.0087</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0236</td></tr></tbody></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2745,13 +2819,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
     }
    ],
    "source": [
