--- a/pruning_distillation_pipeline.ipynb
+++ b/pruning_distillation_pipeline.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 34,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#!pip freeze > requirements.txt\n",
-    "#!pip install -r requirements.txt\n",
-    "#!pip install \"urllib3<2\" # Warning\n",
-    "#%pip install \"pytorch==1.10.1\"\n",
-    "#%pip install transformers datasets tensorboard --upgrade\n",
-    "#!sudo apt-get install git-lfs\n",
-    "#!brew install git-lfs"
+    "# Pruning Distillation Pipeline\n",
+    "\n",
+    "- Comparison of model performance for **sentiment-analysis**\n",
+    "- **BERT-Model** for pruning and as teacher\n",
+    "- **Tiny-BERT** as comparision\n",
+    "- **Training** pruned model and Tiny-BERT **with and without distillation**\n",
+    "- **SST-2** dataset for text-classification"
    ]
   },
   {
@@ -33,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,30 +236,46 @@
    "source": [
     "### Load Dataset and Tokenizer\n",
     "\n",
-    "This code block sets up the SST-2 dataset for use with a BERT-based model. It begins by loading the tokenizer for the textattack/bert-base-uncased-SST-2 model and either loading or retrieving the SST-2 dataset from local storage. A preprocessing function is defined to tokenize the sentences with truncation to a maximum length of 512 tokens. We tokenize the dataset to convert text into numerical representations that a model can understand and process for training. Finally, the training dataset is shuffled with a fixed seed to ensure reproducibility."
+    "This code block sets up the SST-2 dataset for use with a BERT-based model. It begins by loading the tokenizer for the textattack/bert-base-uncased-SST-2 model and **loading the SST-2 dataset** from local storage. A preprocessing function is defined to **tokenize the sentences** with truncation to a maximum length of 512 tokens. We tokenize the dataset to convert text into numerical representations that a model can understand and process for training. Finally, the training dataset is shuffled with a fixed seed to ensure reproducibility."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d58ac7e5cde74a0fa39e488fa64072b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/872 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer\n",
     "from datasets import load_dataset, load_from_disk\n",
     "\n",
     "#main_model = \"google-bert/bert-base-uncased\"\n",
-    "main_model = \"textattack/bert-base-uncased-SST-2\"\n",
-    "tiny_bert_id = \"google/bert_uncased_L-2_H-128_A-2\"\n",
-    "teacher_id = main_model # The main model will also be our teacher for model distillation\n",
+    "#main_model = \"textattack/bert-base-uncased-SST-2\"\n",
+    "#tiny_bert_id = \"google/bert_uncased_L-2_H-128_A-2\"\n",
+    "#teacher_id = main_model # The main model will also be our teacher for model distillation\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(main_model) # We use the same tokenizer throughout all models. It becomes more important for distilliation\n",
+    "#tokenizer = AutoTokenizer.from_pretrained(main_model) # We use the same tokenizer throughout all models. It becomes more important for distilliation\n",
+    "#tokenizer.save_pretrained('./tokenizer')\n",
+    "tokenizer = AutoTokenizer.from_pretrained('./tokenizer')\n",
     "\n",
-    "dataset_id=\"glue\"\n",
-    "dataset_config=\"sst2\"\n",
+    "#dataset_id=\"glue\"\n",
+    "#dataset_config=\"sst2\"\n",
     "\n",
     "#dataset = load_dataset(dataset_id,dataset_config)\n",
-    "#dataset = load_dataset(\"SetFit/sst2\")\n",
     "local_dataset_path = \"./sst2\"  # save dataset locally for showcase purposes\n",
     "#dataset.save_to_disk(local_dataset_path)\n",
     "dataset = load_from_disk(local_dataset_path)\n",
@@ -271,15 +285,12 @@
     "def process(examples):\n",
     "    tokenized_inputs = tokenizer(\n",
     "        examples[\"sentence\"], truncation=True, max_length=512\n",
-    "        #examples[\"text\"], truncation=True, max_length=512\n",
     "    )\n",
     "    return tokenized_inputs\n",
     "\n",
     "tokenized_datasets = dataset.map(process, batched=True)\n",
     "tokenized_datasets = tokenized_datasets.rename_column(\"label\",\"labels\")\n",
-    "tokenized_datasets[\"train\"] = tokenized_datasets[\"train\"].shuffle(seed=42)#.select(range(1000))\n",
-    "\n",
-    "#tokenized_datasets[\"test\"].features"
+    "tokenized_datasets[\"train\"] = tokenized_datasets[\"train\"].shuffle(seed=42)#.select(range(1000))\n"
    ]
   },
   {
@@ -293,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,14 +346,14 @@
    "source": [
     "# Structural Pruning\n",
     "\n",
-    "In the following, the Attention Heads of the original BERT model are structurally pruned based on the smallest magnitude weights. All Attention layers are retained. The hidden-size is reduced from 768 to 384 and the intermediate-size is from 3072 to 1024. The hidden-size represents the Query, Key and Value matricies and the intermediate-size the feed-forward layer. In addition, the pooling and classification layers are configured for training. In total, the number of parameters is reduced from 109M to 33M, a reduction of about 70%.\n",
+    "In the following, the **Attention Heads** and the **intermediate layers** of the original BERT model are structurally pruned based on the **smallest magnitude weights**. All Attention layers are retained. The **hidden-size** is reduced **from 768 to 384** and the **intermediate-size** is reduced **from 3072 to 1536**. The hidden-size represents the **Query, Key and Value** matricies and the intermediate-size the **intermediate layers**. In addition, the pooling and classification layers are configured for training. In total, the number of parameters is **reduced from 109M to 33M**, a reduction of about **70%**.\n",
     "\n",
     "This pruning is based on the work of https://github.com/VainF/Torch-Pruning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![image1](./model_comparison.png)"
+    "![image1](./model_comparison_marked.png)"
    ]
   },
   {
@@ -1011,7 +1022,7 @@
    "source": [
     "# Knowledge Distillation\n",
     "\n",
-    "The following part contains the training procedure of the normal distillation and then the task-specific distillation training. The teacher model in both cases is the original BERT-Model and the student models are each the untrained pruned and Tiny-BERT models. The teacher model is task-specific because it was pre-trained and fine-tuned on the SST-2 dataset.\n",
+    "The following part contains the training procedure of the **task-specific distillation training**. The **teacher** model in both cases is the original **BERT-Model** and the **student** models are each the untrained **pruned** and **Tiny-BERT** models. The teacher model is **task-specific** because it was pre-trained and fine-tuned on the **SST-2** dataset.\n",
     "\n",
     "The Knowledge Destillation training is based on the work of https://github.com/philschmid/knowledge-distillation-transformers-pytorch-sagemaker/tree/master."
    ]
@@ -1113,9 +1124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Destillation Trainer\n",
+    "## Distillation Trainer\n",
     "\n",
-    "This code defines a custom DistillationTrainer for training a student model with knowledge distillation from a teacher model. The custom loss function combines two components: the student loss (based on ground truth labels) and the teacher loss (calculated using Kullback-Leibler Divergence between the softened predictions of the student and teacher). These two losses are weighted by the hyperparameter alpha, allowing the student to learn from both the ground truth and the teacher's knowledge."
+    "This code defines a custom **DistillationTrainer** for training a student model with knowledge distillation from a teacher model. The custom **loss function** combines two components: the **student loss** (based on ground truth labels) and the **teacher loss** (calculated using Kullback-Leibler Divergence between the softened predictions of the student and teacher). These two losses are weighted by the hyperparameter alpha, allowing the **student to learn from both the ground truth and the teacher's knowledge**."
    ]
   },
   {
@@ -1706,7 +1717,7 @@
    "source": [
     "## Hyperparameter Search for Distillation parameter `alpha` & `temperature` with optuna\n",
     "\n",
-    "To optimize the parameter search for `alpha` & `temperature`, optuna can help to find them. Since it is a bit random and the more time and resources you have, the better your results will be, this is just an example of what is possible."
+    "To **optimize the parameter search** for `alpha` & `temperature`, optuna can help to find them. Since it is a bit **random** and the more time and resources you have, the better your results will be, this is just an example of what is possible."
    ]
   },
   {
@@ -2640,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2670,7 +2681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2805,13 +2816,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table border=\"1\" style=\"border-collapse: collapse;\"><thead><tr><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Metric</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + Disitilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">BERT</th></tr></thead><tbody><tr><td style=\"text-align: left; border: 1px solid black;\">accuracy</td><td style=\"text-align: right; border: 1px solid black;\">0.8211</td><td style=\"text-align: right; border: 1px solid black;\">0.828</td><td style=\"text-align: right; border: 1px solid black;\">0.8245</td><td style=\"text-align: right; border: 1px solid black;\">0.8314</td><td style=\"text-align: right; border: 1px solid black;\">0.8303</td><td style=\"text-align: right; border: 1px solid black;\">0.8349</td><td style=\"text-align: right; border: 1px solid black;\">0.9243</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">total_time_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">6.7801</td><td style=\"text-align: right; border: 1px solid black;\">6.4692</td><td style=\"text-align: right; border: 1px solid black;\">7.6287</td><td style=\"text-align: right; border: 1px solid black;\">0.5836</td><td style=\"text-align: right; border: 1px solid black;\">0.5734</td><td style=\"text-align: right; border: 1px solid black;\">0.6305</td><td style=\"text-align: right; border: 1px solid black;\">20.5612</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">samples_per_second</td><td style=\"text-align: right; border: 1px solid black;\">128.6123</td><td style=\"text-align: right; border: 1px solid black;\">134.7927</td><td style=\"text-align: right; border: 1px solid black;\">114.3047</td><td style=\"text-align: right; border: 1px solid black;\">1494.1932</td><td style=\"text-align: right; border: 1px solid black;\">1520.6975</td><td style=\"text-align: right; border: 1px solid black;\">1383.0998</td><td style=\"text-align: right; border: 1px solid black;\">42.41</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">latency_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">0.0078</td><td style=\"text-align: right; border: 1px solid black;\">0.0074</td><td style=\"text-align: right; border: 1px solid black;\">0.0087</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0236</td></tr></tbody></table>"
+       "<table border=\"1\" style=\"border-collapse: collapse;\"><thead><tr><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Metric</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + Disitilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Pruned + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">Tiny BERT + optuna Distilled</th><th style=\"padding: 10px; background-color: #d3d3d3; text-align: center; border: 1px solid black;\">BERT</th></tr></thead><tbody><tr><td style=\"text-align: left; border: 1px solid black;\">accuracy</td><td style=\"text-align: right; border: 1px solid black;\">0.8211</td><td style=\"text-align: right; border: 1px solid black;\">0.828</td><td style=\"text-align: right; border: 1px solid black;\">0.8245</td><td style=\"text-align: right; border: 1px solid black;\">0.8314</td><td style=\"text-align: right; border: 1px solid black;\">0.8303</td><td style=\"text-align: right; border: 1px solid black;\">0.8349</td><td style=\"text-align: right; border: 1px solid black;\">0.9243</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">total_time_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">7.3904</td><td style=\"text-align: right; border: 1px solid black;\">7.357</td><td style=\"text-align: right; border: 1px solid black;\">7.262</td><td style=\"text-align: right; border: 1px solid black;\">0.5782</td><td style=\"text-align: right; border: 1px solid black;\">0.6373</td><td style=\"text-align: right; border: 1px solid black;\">0.6318</td><td style=\"text-align: right; border: 1px solid black;\">21.4963</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">samples_per_second</td><td style=\"text-align: right; border: 1px solid black;\">117.9909</td><td style=\"text-align: right; border: 1px solid black;\">118.5271</td><td style=\"text-align: right; border: 1px solid black;\">120.0769</td><td style=\"text-align: right; border: 1px solid black;\">1508.1948</td><td style=\"text-align: right; border: 1px solid black;\">1368.2355</td><td style=\"text-align: right; border: 1px solid black;\">1380.1891</td><td style=\"text-align: right; border: 1px solid black;\">40.5651</td></tr><tr><td style=\"text-align: left; border: 1px solid black;\">latency_in_seconds</td><td style=\"text-align: right; border: 1px solid black;\">0.0085</td><td style=\"text-align: right; border: 1px solid black;\">0.0084</td><td style=\"text-align: right; border: 1px solid black;\">0.0083</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0007</td><td style=\"text-align: right; border: 1px solid black;\">0.0247</td></tr></tbody></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2869,7 +2880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
